c/examples/writing-a-c-compiler-tests/tests/chapter_8/valid/extra_credit/switch_default_only.c
int main(void) {
    int a = 1;
    switch(a) default: return 1;
    return 0;
}