c/examples/writing-a-c-compiler-tests/tests/chapter_8/invalid_semantics/extra_credit/undefined_label_in_case.c
// make sure we apply usual label validation in switch statement
int main(void) {
    int a = 3;
    switch (a) {
        case 1: goto foo;
        default: return 0;
    }
    return 0;
}